--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adminApp",
+  "name": "college-xplorer",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.5",
+    "formik": "^2.4.5",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-picker-select": "^9.0.0",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
+    "tailwindcss": "^3.3.6",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
