--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-get-location": "^4.0.1",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-maps": "^1.10.0",
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
