--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
-    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.2.1",
@@ -22,12 +22,15 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.0",
+    "react-native-document-picker": "^9.1.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-get-location": "^4.0.1",
-    "react-native-image-picker": "^7.1.0",
+    "react-native-image-picker": "^7.1.1",
     "react-native-maps": "^1.10.3",
     "react-native-onesignal": "^5.0.6",
+    "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.0",
+    "react-native-raw-bottom-sheet": "^2.2.1",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
