--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "@firebase/storage": "^0.12.2",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/firestore": "^19.0.1",
+    "@react-native-firebase/storage": "^19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.5",
     "cloudinary": "^2.0.3",
+    "firebase": "^10.9.0",
     "formik": "^2.4.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-document-picker": "^9.1.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fs": "^2.20.0",
     "react-native-get-location": "^4.0.1",
     "react-native-image-picker": "^7.1.1",
     "react-native-maps": "^1.10.3",
